--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ nav ul li{
    width: 70%;
    border-radius: 12px;
    padding: 34px;
+   background-size: 100% 100%;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
    background-image: url('bg.jpg');
 }
 
