--- a/style.css
+++ b/style.css
@@ -54,15 +54,22 @@ nav ul li{
 }
 
 .bottom{
-    position: sticky;
-    bottom: 0;
+    position: fixed;
+    float: bottom;
+    margin-bottom: 0%;
+    bottom: 0%;
+    width: 100%;
     height: 130px;
     background-color: black;
-    color: white;
+    color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: column;
+    border-style: outset;
+    border-color: rgba(0, 128, 21, 0.952);
+    border-width: 5px;
+    border-radius: 10px;
 }
 
 .icons{
